# binance-bcv-dolar

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.py  ves_usdt.py
.github/workflows/: docker-build.yml
app/: __init__.py  main.py
app/api/: __init__.py  include_routers.py
app/api/routes/: bcv_routes.py  binance_routes.py  dolar_routes.py  fiat_routes.py  health_routes.py  history_routes.py
app/config/: __init__.py  config.py  logging_config.py
app/controllers/: __init__.py  history_data_controller.py
app/database/: __init__.py  db_config.py
app/database/models/: __init__.py  bcv_sql_model.py  binance_sql_model.py
app/enums/: __init__.py  currecies_enum.py  webhook_priority_enum.py
app/scheduler/: __init__.py  dolar_scheduler.py
app/schemas/: __init__.py  bcv_response_schema.py  bcv_response_schemas.py  binance_request_schema.py  binance_response_schemas.py  dolar_response.py  fiats_pair_response.py  history_response_schemas.py
app/services/: __init__.py  average_dolar_service.py  bcv_scrapper.py  binance_p2p.py  fiat_exchange_service.py  webhook_service.py
app/ui/: README.md  index.html
app/ui/static/: manifest.json
app/ui/static/assets/: README.md
app/ui/static/css/: styles.css
app/ui/static/js/: app.js  sw.js
app/ui/templates/: index.html  robots.txt  sitemap.xml
tests/: test.py  test_bcv.py  test_fiat_exchange.py  test_persistence.py  ves_usdt.py
