[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-bcv-dolar"
version = "0.1.2"
description = "API Abierta para Tasas de Cambio en Venezuela - Binance P2P y BCV"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Gabriel Baute", email = "gabrielbaute@example.com"}
]
maintainers = [
    {name = "Gabriel Baute", email = "gabrielbaute@example.com"}
]
keywords = ["exchange-rate", "venezuela", "binance", "bcv", "p2p", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "SQLAlchemy>=2.0.44",
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "APScheduler>=3.11.0",
    "python-dotenv>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "bumpver>=2025.1131",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/gabrielbaute/binance-bcv-dolar"
Repository = "https://github.com/gabrielbaute/binance-bcv-dolar"
Issues = "https://github.com/gabrielbaute/binance-bcv-dolar/issues"

[tool.setuptools]
packages = ["app"]

[tool.bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"app/__init__.py" = [
    '__version__ = "{version}"',
]
"README.md" = [
    "Version: {version}",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=term-missing"
